# package_creation

./: .coverage  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: documentation.yaml  tests.yaml
docs/source/: conf.py  module.rst
src/package_creation_tutorial/: string_ops.py
tests/: test_string_ops.py
